[gd_scene load_steps=39 format=3 uid="uid://bdcunhkivqmtg"]

[ext_resource type="Script" path="res://Scenes/Character/CharacterController.gd" id="1_ydaga"]
[ext_resource type="Texture2D" uid="uid://cpy6ejw8t4xf2" path="res://Resources/Bot Wheel/wake.png" id="2_4e1nr"]
[ext_resource type="Texture2D" uid="uid://5pn2bagixmlg" path="res://Resources/Bot Wheel/death.png" id="2_qfseq"]
[ext_resource type="Texture2D" uid="uid://dvxlwbicun24b" path="res://Resources/Bot Wheel/shoot with FX.png" id="3_4j38h"]
[ext_resource type="Texture2D" uid="uid://dp832rixfdg0n" path="res://Resources/Bot Wheel/move without FX.png" id="3_lptlf"]
[ext_resource type="Texture2D" uid="uid://3roobi5iix5d" path="res://Resources/Bot Wheel/damaged.png" id="3_x8vei"]
[ext_resource type="Texture2D" uid="uid://vwdgfj51w6mn" path="res://Resources/2d_lights_and_shadows_neutral_point_light.webp" id="7_esemm"]
[ext_resource type="AudioStream" uid="uid://bqv2uc26hw1gk" path="res://Resources/NinjaAdventure/Musics/2 - The Cave.ogg" id="8_3iw1f"]
[ext_resource type="AudioStream" uid="uid://dve7bsb1jetld" path="res://Resources/NinjaAdventure/Sounds/Game/Fireball.wav" id="9_fkbve"]
[ext_resource type="AudioStream" uid="uid://deddhyas4i8d" path="res://Resources/NinjaAdventure/Sounds/Game/Explosion2.wav" id="10_24vxu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ereax"]
radius = 22.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w4du7"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 0, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8pix"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 26, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8i2r"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 52, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygo8p"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 78, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_14ax1"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 104, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_r47jj"]
atlas = ExtResource("2_qfseq")
region = Rect2(4, 130, 31, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfgi"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 0, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhnj0"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 26, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ykbe"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 52, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk2vb"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 78, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jg4a"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 104, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0inb"]
atlas = ExtResource("3_x8vei")
region = Rect2(14, 0, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhqu2"]
atlas = ExtResource("3_x8vei")
region = Rect2(14, 26, 23, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh3q0"]
atlas = ExtResource("2_4e1nr")
region = Rect2(0, 104, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ufgu"]
atlas = ExtResource("3_4j38h")
region = Rect2(14, 0, 36, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8qyt"]
atlas = ExtResource("3_4j38h")
region = Rect2(14, 26, 36, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrbem"]
atlas = ExtResource("3_4j38h")
region = Rect2(14, 52, 36, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2qax"]
atlas = ExtResource("3_4j38h")
region = Rect2(14, 78, 36, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3r00"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 0, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj7tl"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 26, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ulq"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 52, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6fw3"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 78, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7s7f"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 104, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_way53"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 130, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqetq"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 156, 48, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xajv0"]
atlas = ExtResource("3_lptlf")
region = Rect2(0, 182, 48, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_ufwqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4du7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8pix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8i2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygo8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14ax1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r47jj")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhnj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ykbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk2vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jg4a")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0inb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0inb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqu2")
}],
"loop": true,
"name": &"hurt",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh3q0")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ufgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8qyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrbem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2qax")
}],
"loop": false,
"name": &"shoot",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3r00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj7tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ulq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6fw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7s7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_way53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqetq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xajv0")
}],
"loop": false,
"name": &"walk",
"speed": 8.0
}]

[node name="CharacterController" type="CharacterBody2D"]
collision_layer = 130
collision_mask = 241
script = ExtResource("1_ydaga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_ereax")

[node name="SpriteWrapper" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteWrapper"]
texture_filter = 1
scale = Vector2(2.55769, 2.55769)
sprite_frames = SubResource("SpriteFrames_ufwqp")
animation = &"walk"

[node name="ShotTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.470588, 0.737255, 1, 1)
energy = 0.4
texture = ExtResource("7_esemm")
texture_scale = 3.0

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3iw1f")
volume_db = -15.0

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_fkbve")
volume_db = -8.0
pitch_scale = 0.8

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_24vxu")
volume_db = -20.0
pitch_scale = 0.8

[connection signal="animation_finished" from="SpriteWrapper/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
